# rust_lambda_playground

./: Cargo.toml  Makefile  sam.yml  template.yml
hello/: .gitignore  Cargo.toml
src/: main.rs
