[package]
name = "rust_lambda_sample"
version = "0.1.0"
authors = ["Tomoki Ninomiya <t.miliya612@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
log = "^0.4"
simple_logger = "1.11.0"
simple-error = "0.2.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
